student entry form shifted to bootstrap

--- a/_header.html
+++ b/_header.html
@@ -4,8 +4,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>School Managment System</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="css/datepicker.css">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-	<link rel="stylesheet" type="text/css" href="css/everyone_format.css"/>
+	<!-- <link rel="stylesheet" type="text/css" href="css/everyone_format.css"/> -->
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
