--- a/_footer.html
+++ b/_footer.html
@@ -1,7 +1,9 @@
 <footer>
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap-datepicker.js"></script>
 	<script src="js/validator.js"></script>
+	<script src="js/application.js"></script>
 </footer>
 </body>
 </html>
