slider added in home page

--- a/_header.html
+++ b/_header.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="css/datepicker.css">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="css/slicebox.css" />
 	<!-- <link rel="stylesheet" type="text/css" href="css/everyone_format.css"/> -->
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
